companies: fix css (more)
1) Employee count does not align
2) section header fonts should be a Helvetica bold and not 'Original Surfer', cursive;
3) we need some instruction on the url section, include http or not etc...

--- a/app/assets/stylesheets/companies.css.scss
+++ b/app/assets/stylesheets/companies.css.scss
@@ -17,7 +17,7 @@
     margin-top: -2px;
   }
   span.header {
-    font-family: 'Original Surfer', cursive;
+    font-family: 'Helvetica';
     font-size: 14px;
   }
   .hiring {
